force-app/main/default/objects/Patient_Visit__c/Patient_Visit__c.object-meta.xml
<CustomObject>
    <label>Patient Visit</label>
    <nameField>
        <displayFormat>PV-{000000}</displayFormat>
        <label>Patient Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>