force-app/main/default/objects/Patient_Visit__c/fields/ECOA_Event_Processed__c.field-meta.xml
<CustomField>
    <fullName>ECOA_Event_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECOA Event Processed</label>
    <type>Checkbox</type>
</CustomField>