force-app/main/default/objects/Patient_Visit__c/fields/Ecoa_Key__c.field-meta.xml
<CustomField>
    <fullName>Ecoa_Key__c</fullName>
    <formula>IF( Is_Adhoc__c ,&apos;&apos;,  &apos;visit_&apos;+ TEXT( Visit_Number__c )  )</formula>
    <label>Ecoa Key</label>
    <type>Text</type>
</CustomField>