force-app/main/default/objects/Patient_Visit__c/fields/Icons__c.field-meta.xml
<CustomField>
    <fullName>Icons__c</fullName>
    <label>Icons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>icon-blood-test</fullName>
                <label>Blood tests</label>
            </value>
            <value>
                <fullName>icon-brief-ph-ex</fullName>
                <label>Physical examination</label>
            </value>
            <value>
                <fullName>icon-ecg</fullName>
                <label>Electrocardiogram (ECG)</label>
            </value>
            <value>
                <fullName>icon-joint</fullName>
                <label>Joint assessment</label>
            </value>
            <value>
                <fullName>icon-lung-test</fullName>
                <label>Lung function test</label>
            </value>
            <value>
                <fullName>icon-lung-check</fullName>
                <label>Lung health check</label>
            </value>
            <value>
                <fullName>icon-pregnancy</fullName>
                <label>Pregnancy test</label>
            </value>
            <value>
                <fullName>icon-questionnaires</fullName>
                <label>Questionnaires</label>
            </value>
            <value>
                <fullName>icon-questions</fullName>
                <label>Questions about your health and medications</label>
            </value>
            <value>
                <fullName>icon-vital-signs</fullName>
                <label>Vital signs</label>
            </value>
            <value>
                <fullName>icon-urine-tests</fullName>
                <label>Urine tests</label>
            </value>
            <value>
                <fullName>icon-receive-study-medication-injection</fullName>
                <label>Receive study medication</label>
            </value>
            <value>
                <fullName>icon-receive-study-medication-capsules</fullName>
                <label>Receive study medication capsules</label>
            </value>
            <value>
                <fullName>icon-fasting</fullName>
                <label>Fasting</label>
            </value>
            <value>
                <fullName>icon-hands-and-feet-x-rays</fullName>
                <label>Hand and feet X-rays</label>
            </value>
            <value>
                <fullName>icon-chest-x-rays</fullName>
                <label>Chest X-rays</label>
            </value>
            <value>
                <fullName>icon-no-study-visit</fullName>
                <label>No study visit</label>
            </value>
            <value>
                <fullName>team-meeting-chat</fullName>
                <label>Exit interview</label>
            </value>
            <value>
                <fullName>medical-specialty-intestine</fullName>
                <label>Colonoscopy</label>
            </value>
            <value>
                <fullName>shipment-package</fullName>
                <label>Supply of study medication</label>
            </value>
            <value>
                <fullName>notes-diary-alternate</fullName>
                <label>eDiary review</label>
            </value>
            <value>
                <fullName>laboratory-test-stool-cup</fullName>
                <label>Stool sample</label>
            </value>
            <value>
                <fullName>biopsy</fullName>
                <label>Biopsy</label>
            </value>
            <value>
                <fullName>task-checklist-check</fullName>
                <label>Check if the study is right for you</label>
            </value>
            <value>
                <fullName>single-neutral-actions-text</fullName>
                <label>Study discussion</label>
            </value>
            <value>
                <fullName>height-and-weight</fullName>
                <label>Height and weight</label>
            </value>
            <value>
                <fullName>cancer-treatments</fullName>
                <label>Cancer treatments</label>
            </value>
            <value>
                <fullName>ct-scan-or-mri-scan</fullName>
                <label>CT scan or MRI scan</label>
            </value>
            <value>
                <fullName>informed-consent</fullName>
                <label>Informed Consent Form</label>
            </value>
            <value>
                <fullName>medical-folder</fullName>
                <label>Medical history</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>