force-app/main/default/objects/Patient_Visit__c/fields/Is_Adhoc__c.field-meta.xml
<CustomField>
    <fullName>Is_Adhoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adhoc</label>
    <type>Checkbox</type>
</CustomField>