force-app/main/default/objects/Patient_Visit__c/fields/Is_Pre_Enrollment_Patient_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Enrollment_Patient_Visit__c</fullName>
    <formula>Visit__r.Is_Pre_Enrollment_Visit__c</formula>
    <label>Is Pre Enrollment Patient Visit</label>
    <type>Checkbox</type>
</CustomField>