force-app/main/default/objects/Patient_Visit__c/fields/SDH_Key__c.field-meta.xml
<CustomField>
    <fullName>SDH_Key__c</fullName>
    <externalId>true</externalId>
    <label>SDH Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>